// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CheckoutPanel snapshots > matches the loading snapshot 1`] = `
<div
  class="grid gap-3 border-t border-border-base pt-4"
>
  <div
    class="grid gap-2"
  >
    <div
      class="flex items-center gap-2"
    >
      <button
        aria-label="Decrease quantity"
        class="inline-flex min-h-10 items-center justify-center gap-2 rounded-app border px-4 py-2 text-sm font-semibold transition focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-60 border-border-base bg-surface text-text-base hover:border-primary hover:text-primary focus-visible:ring-primary h-10 w-10 px-0"
        disabled=""
        type="button"
      >
        -
      </button>
      <input
        class="h-10 w-20 rounded-app border border-border-base bg-surface px-3 text-center text-sm font-semibold outline-none focus:border-primary focus:ring-2 focus:ring-blue-100"
        inputmode="numeric"
        max="5"
        min="1"
        step="1"
        type="number"
        value="1"
      />
      <button
        aria-label="Increase quantity"
        class="inline-flex min-h-10 items-center justify-center gap-2 rounded-app border px-4 py-2 text-sm font-semibold transition focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-60 border-border-base bg-surface text-text-base hover:border-primary hover:text-primary focus-visible:ring-primary h-10 w-10 px-0"
        type="button"
      >
        +
      </button>
    </div>
  </div>
  <button
    class="inline-flex min-h-10 items-center justify-center gap-2 rounded-app border px-4 py-2 text-sm font-semibold transition focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-60 border-primary bg-primary text-white hover:bg-primary-dark focus-visible:ring-primary "
    disabled=""
    type="button"
  >
    Working...
  </button>
</div>
`;

exports[`FeedbackMessage snapshots > matches confirmed success feedback 1`] = `
<div
  class="grid gap-3 rounded-app border px-4 py-3 text-sm border-green-200 bg-green-50 text-green-900"
>
  <p
    class="font-semibold"
  >
    Order confirmed successfully.
  </p>
  <p>
    Total: 
    $49.90
  </p>
  <a
    class="text-sm font-semibold text-primary underline underline-offset-4"
    href="/orders/order-1"
  >
    View order status
  </a>
</div>
`;

exports[`FeedbackMessage snapshots > matches insufficient stock feedback 1`] = `
<div
  class="grid gap-3 rounded-app border border-red-200 bg-red-50 px-4 py-3 text-sm text-red-900"
>
  <p
    class="font-semibold"
  >
    There is not enough stock for that quantity.
  </p>
  <div
    class="flex flex-wrap gap-2"
  >
    <button
      class="inline-flex min-h-10 items-center justify-center gap-2 rounded-app border px-4 py-2 text-sm font-semibold transition focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-60 border-border-base bg-surface text-text-base hover:border-primary hover:text-primary focus-visible:ring-primary "
      type="button"
    >
      Refresh stock
    </button>
  </div>
</div>
`;

exports[`FeedbackMessage snapshots > matches pending processing feedback 1`] = `
<div
  class="grid gap-3 rounded-app border px-4 py-3 text-sm border-blue-200 bg-blue-50 text-blue-900"
>
  <p
    class="font-semibold"
  >
    Order accepted and pending ERP processing.
  </p>
  <p>
    Total: 
    $49.90
  </p>
  <a
    class="text-sm font-semibold text-primary underline underline-offset-4"
    href="/orders/order-1"
  >
    View order status
  </a>
</div>
`;

exports[`FeedbackMessage snapshots > matches temporary failure feedback 1`] = `
<div
  class="grid gap-3 rounded-app border border-red-200 bg-red-50 px-4 py-3 text-sm text-red-900"
>
  <p
    class="font-semibold"
  >
    Processing is temporarily unavailable. Retry or check the order status.
  </p>
  <div
    class="flex flex-wrap gap-2"
  />
</div>
`;
